# neuro-dynadojo

./: .gitignore  CITATION.cff  README.md  REPLY_TO_REVIEW.md  pyproject.toml  review_draft.md
.github/workflows/: ci.yml
docs/: DOCS_QA_CHARTER.md  REVIEW_GUIDE.md  REVIEW_RESPONSE.md  TECHNICAL_REPORT.md
examples/: cfc_pac_seeds.py  electrophys_fslnets.py  evolved_scenario.py  evolved_scenario_opus.py  evolved_scenario_targeted.py  fm_probe.py  fm_probe_bendr.py  fm_probe_bendr_scaled.py  fm_probe_braindecode.py  hbn_erp_fm.py  hbn_surroundsupp_decode.py  identifiability_matrix.py  llamea_evolve_scenarios.py  map_cfc_pac_boundary.py  multi_fm_leaderboard.py  multi_fm_leaderboard_container.py  netsim_adversarial.py  netsim_real_connectome.py  netsim_table.py  osl_dynamics_scenarios.py  plot_cfc_pac_boundary.py  plot_cfc_pac_probe_comparison.py  plot_cfc_pac_raincloud.py  plot_landscape_heatmap.py  run_leaderboard_container.sh  run_osl_container.sh  scenario_benchmark.py  wiring_geometry_study.py
figures/: cfc_pac_3shell_seeds.json  cfc_pac_seeds.json  identifiability_matrix.html  make_preview.py
results/: cfc_pac_boundary_freq.csv  cfc_pac_boundary_grid.csv  cfc_pac_probe_kernel.json  cfc_pac_probe_mlp.json  landscape_matrix.csv  wiring_geometry_study.csv
src/neurodynadojo/: __init__.py  bench.py  scenarios.py
src/neurodynadojo/algorithms/: __init__.py  directed.py  dynamics.py  fc.py  latent.py  osl_dynamics.py
src/neurodynadojo/challenges/: __init__.py  recovery.py
src/neurodynadojo/generators/: __init__.py  hopf.py  montage.py  netsim.py  waves.py
src/neurodynadojo/probes/: __init__.py  probe.py
tests/: test_directed.py  test_dynamics.py  test_hopf_fc.py  test_latent.py  test_montage.py  test_negative_control.py  test_netsim.py  test_probe.py  test_probe_selection.py  test_scenarios.py  test_sci_montage.py
